<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">HoloKenMod</string>

    <string name="menu_new">New Game</string>
    <string name="menu_load">Load</string>
    <string name="menu_save">Save</string>
    <string name="menu_restart_game">Restart Game</string>
    <string name="menu_stats">Statistics</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_help">Help</string>
    <string name="menu_issues">Bugs and Features</string>

    <string name="menu_show_mistakes">Show mistakes</string>
    <string name="menu_reveal_cell">Reveal cell</string>
    <string name="menu_reveal_cage">Reveal cage</string>
    <string name="menu_show_solution">Show solution</string>

    <string name="dialog_title_load">Load Game</string>

    <string name="puzzle_solved">Puzzle solved!</string>
    <string name="puzzle_record_time">New best time - </string>

    <string name="time_zero">00:00:00</string>
    <string name="save_games_empty">No save games found</string>

    <string name="settings_group_assistance">Game Assistance</string>
    <string name="setting_flag_bad_maths_title">Highlight incorrect maths</string>
    <string name="setting_flag_duplicates_title">Highlight duplicates</string>
    <string name="setting_remove_pencils_title">Auto-remove pencil marks</string>
    <string name="setting_remove_pencils_summary">In the same row or column as a penned number</string>

    <string name="settings_group_display">Display</string>
    <string name="setting_theme_title">Theme</string>
    <string name="setting_pencil_at_start_title">Pencil marks at game start</string>
    <string name="setting_pencil_3x3_title">Pencil marks in 3x3 grid</string>
    <string name="setting_pencil_3x3_summary_on">Show in 3x3 grid</string>
    <string name="setting_pencil_3x3_summary_off">Show in numerical order instead</string>
    <string name="setting_show_timer_title">Show game timer</string>
    <string name="setting_show_fullscreen_title">Show full screen</string>
    <string name="setting_keep_screen_on_title">Keep screen on</string>

    <string name="stats_group_title">Statistics</string>
    <string name="stats_puzzles_title">Puzzle Statistics</string>
    <string name="stats_puzzles_started">Puzzles started</string>
    <string name="stats_puzzles_hinted">Puzzles hinted</string>
    <string name="stats_puzzles_solved">Puzzles solved</string>
    <string name="stats_puzzles_solved_streak">Current streak</string>
    <string name="stats_puzzles_longest_streak">Longest streak</string>
    <string name="stats_clear">Reset statistics</string>

    <string name="help_section_title">Help</string>
    <string name="help_rules_title">Rules</string>
    <string name="help_rules_summary">
        Fill in each row and column with numbers from 1 to grid size.
        Numbers may only be used once per row and column.
        \n\nThick lines indicate \'cages\', where each cage has a math puzzle to be solved.
        For example, \'5+\' means all numbers in that cage must add up to 5.
        \n\nNumbers may be used more than once per cage, as long as there is only one of each number per row or column.
    </string>
    <string name="help_instructions_title">How to play</string>
    <string name="help_instructions_summary">
        Fill up the grid squares using the number buttons.
        To enter a number to the selected cell, long-press the number button.
        To add or remove a possible number, just press the number button.
        \n\nUse the question mark to see if there are any mistakes in the filled cells.
        \n\nHoloKen will auto-save your game if you need to stop.
    </string>

    <string name="about_section_title">About</string>
    <string name="about_version_title">Version</string>
    <string name="about_version_summary">HoloKenMod 1.6.1</string>
    <string name="about_license_title">License</string>
    <string name="about_license_summary">GNU General Public License v3</string>
    <string name="about_website_title">Project Home</string>
    <string name="about_website_summary">Report any bugs or suggestions at\n<a href="https://github.com/queler/holokenmod">https://github.com/queler/holokenmod</a></string>
    <string name="about_developers_title">Developer</string>
    <string name="about_developers_summary">Adam Queler, Forked from Holoken 1.1.1 by Amanda Chow, with much credit to Ben Buxton and Stephen Lee of Mathdoku</string>
    <string name="about_changelog_title">Changelog</string>
    <string name="about_changelog_summary">
        v1.6.1 merged pencil mark option, infinite undo buffer\n
        v1.5.1 all autofill is recursive\n
        v1.4.1 fixed more serious lint errors\n
        v1.4 Fixed toasts, changed defaults to holodark and auto-remove\n
        migrated to gradle\n
        fixed crash when error and holding pencil\n
        v1.3 Forked from 1.1.1 on googlecode\n
        Incorporated 1.2 once I found it on github\n
        auto-pencil marks (needs option to turn off)\n
        better colors for Dark mode\n
        clearing single possibilites will remove pencil marks now…\n
        …but will crash eventually if there\'s a mistake\n
        v1.2 (I think I merged these in)\n
        * Coloured last modified cell\n
               * Centered options menu to work for 3.0 devices\n
               * Tweaked 480dp layout\n
               * Added operations menu\n
        v1.1.1\n * Fixed slight border bug\n
        v1.1\n * Shows streaks and average times in statistics\n
               * Changed time penalty\n
               * Added input mode, batch undo fixes\n
               * Auto-remove pencil marks, fix layout bug\n
        v1.0.3\n * Theme tweaks and multiple undo\n
        v1.0\n * Initial release
    </string>

    <string name="dialog_ok">OK</string>
    <string name="dialog_cancel">Cancel</string>

    <string name="dialog_restart_title">Restart game?</string>
    <string name="dialog_restart_msg">This game will be restarted</string>

    <string name="dialog_delete_title">Delete game?</string>
    <string name="dialog_delete_msg">This game will be deleted</string>

    <string name="dialog_delete_all_title">Delete all games?</string>
    <string name="dialog_delete_all_msg">All games will be deleted</string>

    <string name="toast_cheated">This puzzle is hard eh</string>
    <string name="simulate_game_solved">Simulate game solved</string>
    <string name="difficulty_label">Difficulty</string>
    <string name="single_cells_usage_label">Single cells</string>
    <string name="operations_label">Operations</string>
    <string name="digits_label">Digits</string>
    <string name="show_operators_toggle">Show operators</string>
    <string name="difficulty_any">Any</string>
    <string name="difficulty_very_easy">Very Easy</string>
    <string name="difficulty_easy">Easy</string>
    <string name="difficulty_medium">Medium</string>
    <string name="difficulty_hard">Hard</string>
    <string name="difficulty_extreme">Very hard</string>
    <string name="single_cages_fixed_number">Fixed number</string>
    <string name="single_cages_no_singles">No singles</string>
    <string name="single_cages_dynamic">Dynamic</string>
    <string name="operations_all">+ - * /</string>
    <string name="operations_addition_substraction">+ -</string>
    <string name="operations_addition_multiplication">+ *</string>
    <string name="operations_multiplication">*</string>
    <string name="digits_from_zero">0…</string>
    <string name="digits_from_one">1…</string>
    <string name="digits_primes">Primes</string>
    <string name="digits_fibonacci">Fibonacci</string>
    <string name="digits_padovan">Padovan</string>
    <string name="digits_from_minus_two">-2…</string>
    <string name="digits_from_minus_five">-5…</string>
    <string name="new_grid_shape_square">Square</string>
    <string name="new_grid_shape_rectangular">Rectangular</string>
    <string name="new_grid_shape_size">"Size: %1$s"</string>
    <string name="new_game_activity_start_new_game">Start New Game</string>
    <string name="new_grid_game_options">Game options</string>
    <string name="new_grid_options_basic_options">Basic</string>
    <string name="new_grid_options_advanced_options">Advanced</string>

    <plurals name="toast_mistakes">
        <item quantity="one">1 mistake</item>
        <item quantity="other">%d mistakes</item>
    </plurals>
    <plurals name="toast_filled">
        <item quantity="one">1 filled cell</item>
        <item quantity="other">%d filled cells</item>
    </plurals>
</resources>
