<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group
        android:id="@+id/navGroup1">
        <item
            android:id="@+id/newGame2"
            android:icon="@drawable/outline_add_24"
            android:title="@string/menu_new" />
        <item android:id="@+id/menu_restart_game"
            android:title="@string/menu_restart_game"
            android:icon="@drawable/outline_replay_24"/>
        <item android:id="@+id/menu_save"
            android:title="@string/menu_save"
            android:icon="@drawable/outline_save_24"/>
    </group>

    <group
        android:id="@+id/navGroup2">
        <item android:id="@+id/menu_show_mistakes"
            android:title="@string/menu_show_mistakes"/>
        <item android:id="@+id/menu_reveal_cell"
            android:title="@string/menu_reveal_cell"/>
        <item android:id="@+id/menu_reveal_cage"
            android:title="@string/menu_reveal_cage"/>
        <item android:id="@+id/menu_show_solution"
            android:title="@string/menu_show_solution"/>
    </group>

    <group
        android:id="@+id/navGroup3">
        <item android:id="@+id/menu_stats"
            android:title="@string/menu_stats"
            android:icon="@drawable/outline_leaderboard_24"/>
        <item android:id="@+id/menu_settings"
            android:title="@string/menu_settings"
            android:icon="@drawable/outline_settings_24"/>
        <item android:id="@+id/menu_help"
            android:title="@string/menu_help"
            android:icon="@drawable/outline_help_24"/>
        <item android:id="@+id/menu_bugtracker"
            android:title="@string/menu_issues"
            android:icon="@drawable/outline_bug_report_24" />

    </group>
</menu>