<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/about_layout" 
    android:orientation="vertical"
    android:layout_width="fill_parent" 
    android:layout_height="fill_parent"
    android:padding="10dp" >
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textview.MaterialTextView
            style="@style/DialogText.Heading"
            android:text="@string/about_version_title"/>

        <com.google.android.material.textview.MaterialTextView
            style="@style/DialogText"
            android:text="@string/about_version_summary"/>

        <com.google.android.material.textview.MaterialTextView
            style="@style/DialogText.Heading"
            android:text="@string/about_license_title"/>

        <com.google.android.material.textview.MaterialTextView
            style="@style/DialogText"
            android:text="@string/about_license_summary"/>

        <com.google.android.material.textview.MaterialTextView
            style="@style/DialogText.Heading"
            android:text="@string/about_website_title"/>

        <com.google.android.material.textview.MaterialTextView
            style="@style/DialogText"
            android:text="@string/about_website_summary"/>

        <com.google.android.material.textview.MaterialTextView
            style="@style/DialogText.Heading"
            android:text="@string/about_developers_title"/>

        <com.google.android.material.textview.MaterialTextView
            style="@style/DialogText"
            android:text="@string/about_developers_summary"/>

        <com.google.android.material.textview.MaterialTextView
            style="@style/DialogText.Heading"
            android:text="@string/about_changelog_title"/>

        <com.google.android.material.textview.MaterialTextView
            style="@style/DialogText"
            android:text="@string/about_changelog_summary"/>
    </LinearLayout>       
</ScrollView>
