<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <group
        android:id="@+id/group1"
        android:checkableBehavior="single">

        <item
            android:id="@+id/undo"
            app:showAsAction="always"
            android:contentDescription="Text"
            android:icon="@drawable/baseline_undo_24"
            android:title="Hint" />

        <item android:id="@+id/menu_show_mistakes"
            android:title="@string/menu_show_mistakes"
            app:showAsAction="never" />

        <item android:id="@+id/menu_reveal_cell"
            android:title="@string/menu_reveal_cell"
            app:showAsAction="never" />

        <item android:id="@+id/menu_reveal_cage"
            android:title="@string/menu_reveal_cage"
            app:showAsAction="never" />

        <item
            android:id="@+id/menu_show_solution"
            android:title="@string/menu_show_solution"
            app:showAsAction="never" />

    </group>
</menu>