<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/help_layout"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:padding="10dp" >
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        >

        <com.google.android.material.textview.MaterialTextView
            style="@style/DialogText.Heading"
            android:text="@string/help_rules_title"/>

        <com.google.android.material.textview.MaterialTextView
            style="@style/DialogText"
            android:text="@string/help_rules_summary"/>

        <com.google.android.material.textview.MaterialTextView
            style="@style/DialogText.Heading"
            android:text="@string/help_instructions_title"/>

        <com.google.android.material.textview.MaterialTextView
            style="@style/DialogText"
            android:text="@string/help_instructions_summary"/>
    </LinearLayout>      
</ScrollView>

