<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/statsscroller"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:fillViewport="true"
        tools:context=".ui.StatsActivity" >

    <LinearLayout android:id="@+id/statscontainer"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        
        <TextView style="@style/TextAppearance.Material3.HeadlineMedium"
                  android:id="@+id/recordgames"
                  android:text="@string/stats_puzzles_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TableLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">
            <TableRow>
                <TextView style="@style/TextAppearance.Material3.LabelLarge"
                          android:id="@+id/startedgames"
                          android:text="@string/stats_puzzles_started"
                          android:layout_width="0dp"
                          android:layout_weight="1"/>
                <TextView android:id="@+id/startedstat"
                          android:layout_width="0dp"
                          android:layout_weight="1"/>
            </TableRow>

            <TableRow>
                <TextView style="@style/TextAppearance.Material3.LabelLarge"
                          android:id="@+id/hintedgames"
                          android:text="@string/stats_puzzles_hinted"
                          android:layout_width="0dp"
                          android:layout_weight="1"/>
                <TextView android:id="@+id/hintedstat"
                          android:layout_width="0dp"
                          android:layout_weight="1"/>
            </TableRow>

            <TableRow>
                <TextView style="@style/TextAppearance.Material3.LabelLarge"
                          android:id="@+id/solvedgames"
                          android:text="@string/stats_puzzles_solved"
                          android:layout_width="0dp"
                          android:layout_weight="1"/>
                <TextView android:id="@+id/solvedstat"
                          android:layout_width="0dp"
                          android:layout_weight="1"/>
            </TableRow>
            
            <TableRow>
                <TextView style="@style/TextAppearance.Material3.LabelLarge"
                          android:text="@string/stats_puzzles_solved_streak"
                          android:layout_width="0dp"
                          android:layout_weight="1"/>
                <TextView android:id="@+id/solvedstreak"
                          android:layout_width="0dp"
                          android:layout_weight="1"/>
            </TableRow>
            
            <TableRow>
                <TextView style="@style/TextAppearance.Material3.LabelLarge"
                          android:text="@string/stats_puzzles_longest_streak"
                          android:layout_width="0dp"
                          android:layout_weight="1"/>
                <TextView android:id="@+id/longeststreak"
                          android:layout_width="0dp"
                          android:layout_weight="1"/>
            </TableRow>
        </TableLayout>
        
        <com.google.android.material.button.MaterialButton
            android:id="@+id/clearstats"
            android:text="@string/stats_clear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"/>
    </LinearLayout>
</ScrollView>
